--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+ 	 <servlet-name>SignServletController</servlet-name>
+	 <servlet-class>com.application.controller.SignServletController</servlet-class>
+  </servlet>
+ 	<servlet-mapping>
+ 	<servlet-name>SignServletController</servlet-name>
+  <url-pattern>/signServletController</url-pattern>
+  </servlet-mapping>
+
 </web-app>
