Add a forms to use post method in a servlet, add a servlet that receive params from URL and forward to other servlet, configured DD (web.xml) to init with params and mapping a servlet or redirect to linkedIn page

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>Servlet</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>indexView.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
@@ -10,13 +10,31 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <context-param>
+    <param-name>user</param-name>
+    <param-value>admin1234</param-value>
+  </context-param>
+  <context-param>
+    <param-name>password</param-name>
+    <param-value>123example456</param-value>
+  </context-param>
+  
   <servlet>
- 	 <servlet-name>SignServletController</servlet-name>
-	 <servlet-class>com.application.controller.SignServletController</servlet-class>
+ 	 <servlet-name>ParamServlet</servlet-name>
+	 <servlet-class>com.application.controller.ParamServlet</servlet-class>
+	 <init-param>
+  		<param-name>name</param-name>
+  		<param-value>Jhonson Example</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>email</param-name>
+  		<param-value>jhonson@example.com</param-value>
+  	</init-param>
   </servlet>
- 	<servlet-mapping>
- 	<servlet-name>SignServletController</servlet-name>
-  <url-pattern>/signServletController</url-pattern>
-  </servlet-mapping>
+ 	
+	 <servlet-mapping>
+	 	<servlet-name>ParamServlet</servlet-name>
+	  	<url-pattern>/params</url-pattern>
+	</servlet-mapping>
 
 </web-app>
